# python-2048

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  tests.yaml
src/python_2048/: version.py
src/python_2048/cli/: app.py
src/python_2048/cli/commands/: run.py  version.py
src/python_2048/cli/lib/: renderer.py  rendering.py
src/python_2048/configurations/: exceptions.py  file_utils.py  log_utils.py
src/python_2048/game/: constants.py  engine.py  exceptions.py  rendering.py  state.py  types.py
src/python_2048/game/lib/: board_utils.py  tile_utils.py
src/python_2048/players/: base.py  exceptions.py  human_local.py  llm.py
tests/: conftest.py
tests/cli/commands/: test_acceptance_run_by_human_local.py  test_acceptance_run_by_llm.py  test_acceptance_version.py
tests/configurations/: test_integration_file_utils.py  test_integration_log_utils.py
tests/game/: test_unit_engine.py  test_unit_state.py
tests/game/lib/: test_unit_board_utils.py  test_unit_board_utils__move_and_merge.py  test_unit_tile_utils.py
tests/players/: test_evaluation_llm.py  test_integration_human_local.py  test_integration_llm.py
